// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager pulls "frodo config-manager pull services --directory serviceTestDir1 -m forgeops": should export the services in alpha realm in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull services --directory serviceTestDir1 -m forgeops": should export the services in alpha realm in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull services --directory serviceTestDir1 -m forgeops": should export the services in alpha realm in fr-config-manager style": serviceTestDir1/realms/alpha/services/DataStoreService.json 1`] = `
{
  "_id": "",
  "_rev": "1612405510",
  "_type": {
    "_id": "DataStoreService",
    "collection": false,
    "name": "External Data Stores",
  },
  "applicationDataStoreId": "application-store",
  "policyDataStoreId": "policy-store",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services --directory serviceTestDir1 -m forgeops": should export the services in alpha realm in fr-config-manager style": serviceTestDir1/realms/alpha/services/IdentityAssertionService.json 1`] = `
{
  "_id": "",
  "_rev": "403540704",
  "_type": {
    "_id": "IdentityAssertionService",
    "collection": false,
    "name": "Identity Assertion Service",
  },
  "cacheDuration": 120,
  "enable": true,
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services --directory serviceTestDir1 -m forgeops": should export the services in alpha realm in fr-config-manager style": serviceTestDir1/realms/alpha/services/SocialIdentityProviders.json 1`] = `
{
  "_id": "",
  "_rev": "1077208638",
  "_type": {
    "_id": "SocialIdentityProviders",
    "collection": false,
    "name": "Social Identity Provider Service",
  },
  "enabled": true,
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services --directory serviceTestDir1 -m forgeops": should export the services in alpha realm in fr-config-manager style": serviceTestDir1/realms/alpha/services/email.json 1`] = `
{
  "_id": "",
  "_rev": "-876042057",
  "_type": {
    "_id": "email",
    "collection": false,
    "name": "Email Service",
  },
  "emailAddressAttribute": "mail",
  "emailImplClassName": "org.forgerock.openam.services.email.MailServerImpl",
  "emailRateLimitSeconds": 1,
  "port": 465,
  "sslState": "SSL",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services --directory serviceTestDir1 -m forgeops": should export the services in alpha realm in fr-config-manager style": serviceTestDir1/realms/alpha/services/httpclient.json 1`] = `
{
  "_id": "",
  "_rev": "-1187676076",
  "_type": {
    "_id": "httpclient",
    "collection": false,
    "name": "Http Client Service",
  },
  "core": {
    "enabled": false,
  },
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services --directory serviceTestDir1 -m forgeops": should export the services in alpha realm in fr-config-manager style": serviceTestDir1/realms/alpha/services/id-repositories.json 1`] = `
{
  "_id": "",
  "_rev": "-1741783487",
  "_type": {
    "_id": "id-repositories",
    "collection": false,
    "name": "sunIdentityRepositoryService",
  },
  "sunIdRepoAttributeCombiner": "com.iplanet.am.sdk.AttributeCombiner",
  "sunIdRepoAttributeValidator": [
    "class=com.sun.identity.idm.server.IdRepoAttributeValidatorImpl",
    "minimumPasswordLength=8",
    "usernameInvalidChars=*|(|)|&|!",
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services --directory serviceTestDir1 -m forgeops": should export the services in alpha realm in fr-config-manager style": serviceTestDir1/realms/alpha/services/id-repositories/OpenDJ.json 1`] = `
{
  "_id": "OpenDJ",
  "_type": {
    "_id": "LDAPv3ForForgeRockIAM",
    "collection": true,
    "name": "ForgeRock IAM Directory Server",
  },
  "authentication": {
    "sun-idrepo-ldapv3-config-auth-naming-attr": "uid",
  },
  "cachecontrol": {
    "sun-idrepo-ldapv3-dncache-enabled": true,
    "sun-idrepo-ldapv3-dncache-size": 1500,
  },
  "errorhandling": {
    "com.iplanet.am.ldap.connection.delay.between.retries": 1000,
  },
  "groupconfig": {
    "sun-idrepo-ldapv3-config-group-attributes": [
      "dn",
      "cn",
      "uniqueMember",
      "objectclass",
    ],
    "sun-idrepo-ldapv3-config-group-container-name": "ou",
    "sun-idrepo-ldapv3-config-group-container-value": "groups",
    "sun-idrepo-ldapv3-config-group-objectclass": [
      "top",
      "groupOfUniqueNames",
    ],
    "sun-idrepo-ldapv3-config-groups-search-attribute": "cn",
    "sun-idrepo-ldapv3-config-groups-search-filter": "(|(objectclass=groupOfURLs)(objectclass=groupOfUniqueNames))",
    "sun-idrepo-ldapv3-config-memberof": "isMemberOf",
    "sun-idrepo-ldapv3-config-memberurl": "memberUrl",
    "sun-idrepo-ldapv3-config-uniquemember": "uniqueMember",
  },
  "ldapsettings": {
    "openam-idrepo-ldapv3-affinity-enabled": true,
    "openam-idrepo-ldapv3-affinity-level": "bind",
    "openam-idrepo-ldapv3-behera-support-enabled": true,
    "openam-idrepo-ldapv3-contains-iot-identities-enriched-as-oauth2client": false,
    "openam-idrepo-ldapv3-heartbeat-interval": 10,
    "openam-idrepo-ldapv3-heartbeat-timeunit": "SECONDS",
    "openam-idrepo-ldapv3-keepalive-searchfilter": "(objectclass=*)",
    "openam-idrepo-ldapv3-mtls-enabled": false,
    "openam-idrepo-ldapv3-proxied-auth-denied-fallback": false,
    "openam-idrepo-ldapv3-proxied-auth-enabled": false,
    "sun-idrepo-ldapv3-config-authid": "uid=am-identity-bind-account,ou=admins,ou=identities",
    "sun-idrepo-ldapv3-config-authpw": null,
    "sun-idrepo-ldapv3-config-connection-mode": "LDAPS",
    "sun-idrepo-ldapv3-config-connection_pool_max_size": 14,
    "sun-idrepo-ldapv3-config-connection_pool_min_size": 4,
    "sun-idrepo-ldapv3-config-ldap-server": [
      "ds-idrepo-0.ds-idrepo:1636",
    ],
    "sun-idrepo-ldapv3-config-max-result": 1000,
    "sun-idrepo-ldapv3-config-organization_name": "ou=identities",
    "sun-idrepo-ldapv3-config-search-scope": "SCOPE_SUB",
    "sun-idrepo-ldapv3-config-time-limit": 10,
  },
  "persistentsearch": {
    "sun-idrepo-ldapv3-config-psearch-filter": "(!(objectclass=frCoreToken))",
    "sun-idrepo-ldapv3-config-psearch-scope": "SCOPE_SUB",
    "sun-idrepo-ldapv3-config-psearchbase": "ou=identities",
  },
  "pluginconfig": {
    "sunIdRepoAttributeMapping": [],
    "sunIdRepoClass": "org.forgerock.openam.idrepo.ldap.DJLDAPv3Repo",
    "sunIdRepoSupportedOperations": [
      "realm=read,create,edit,delete,service",
      "group=read,create,edit,delete",
      "user=read,create,edit,delete,service",
    ],
  },
  "userconfig": {
    "sun-idrepo-ldapv3-config-active": "Active",
    "sun-idrepo-ldapv3-config-auth-kba-attempts-attr": [
      "kbaInfoAttempts",
    ],
    "sun-idrepo-ldapv3-config-auth-kba-attr": [
      "kbaInfo",
    ],
    "sun-idrepo-ldapv3-config-auth-kba-index-attr": "kbaActiveIndex",
    "sun-idrepo-ldapv3-config-createuser-attr-mapping": [
      "cn",
      "sn",
    ],
    "sun-idrepo-ldapv3-config-inactive": "Inactive",
    "sun-idrepo-ldapv3-config-isactive": "inetuserstatus",
    "sun-idrepo-ldapv3-config-people-container-name": "ou",
    "sun-idrepo-ldapv3-config-people-container-value": "people",
    "sun-idrepo-ldapv3-config-user-attributes": [
      "fr-idm-uuid",
      "iplanet-am-auth-configuration",
      "iplanet-am-user-alias-list",
      "iplanet-am-user-password-reset-question-answer",
      "mail",
      "assignedDashboard",
      "authorityRevocationList",
      "dn",
      "iplanet-am-user-password-reset-options",
      "employeeNumber",
      "createTimestamp",
      "kbaActiveIndex",
      "caCertificate",
      "iplanet-am-session-quota-limit",
      "iplanet-am-user-auth-config",
      "sun-fm-saml2-nameid-infokey",
      "sunIdentityMSISDNNumber",
      "iplanet-am-user-password-reset-force-reset",
      "sunAMAuthInvalidAttemptsData",
      "devicePrintProfiles",
      "givenName",
      "iplanet-am-session-get-valid-sessions",
      "objectClass",
      "adminRole",
      "inetUserHttpURL",
      "lastEmailSent",
      "iplanet-am-user-account-life",
      "postalAddress",
      "userCertificate",
      "preferredtimezone",
      "iplanet-am-user-admin-start-dn",
      "oath2faEnabled",
      "preferredlanguage",
      "etag",
      "sun-fm-saml2-nameid-info",
      "userPassword",
      "iplanet-am-session-service-status",
      "telephoneNumber",
      "iplanet-am-session-max-idle-time",
      "distinguishedName",
      "iplanet-am-session-destroy-sessions",
      "kbaInfoAttempts",
      "modifyTimestamp",
      "uid",
      "iplanet-am-user-success-url",
      "iplanet-am-user-auth-modules",
      "kbaInfo",
      "memberOf",
      "sn",
      "preferredLocale",
      "manager",
      "iplanet-am-session-max-session-time",
      "deviceProfiles",
      "boundDevices",
      "cn",
      "oathDeviceProfiles",
      "webauthnDeviceProfiles",
      "iplanet-am-user-login-status",
      "pushDeviceProfiles",
      "push2faEnabled",
      "inetUserStatus",
      "retryLimitNodeCount",
      "iplanet-am-user-failure-url",
      "iplanet-am-session-max-caching-time",
      "isMemberOf",
    ],
    "sun-idrepo-ldapv3-config-user-objectclass": [
      "iplanet-am-managed-person",
      "inetuser",
      "sunFMSAML2NameIdentifier",
      "inetorgperson",
      "devicePrintProfilesContainer",
      "iplanet-am-user-service",
      "iPlanetPreferences",
      "pushDeviceProfilesContainer",
      "forgerock-am-dashboard-service",
      "organizationalperson",
      "top",
      "kbaInfoContainer",
      "person",
      "sunAMAuthAccountLockout",
      "oathDeviceProfilesContainer",
      "webauthnDeviceProfilesContainer",
      "iplanet-am-auth-configuration-service",
      "deviceProfilesContainer",
      "boundDevicesContainer",
      "fr-idm-managed-user-explicit",
    ],
    "sun-idrepo-ldapv3-config-users-search-attribute": "fr-idm-uuid",
    "sun-idrepo-ldapv3-config-users-search-filter": "(objectclass=inetorgperson)",
  },
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services --directory serviceTestDir1 -m forgeops": should export the services in alpha realm in fr-config-manager style": serviceTestDir1/realms/alpha/services/oauth-oidc.json 1`] = `
{
  "_id": "",
  "_rev": "-1860549039",
  "_type": {
    "_id": "oauth-oidc",
    "collection": false,
    "name": "OAuth2 Provider",
  },
  "advancedOAuth2Config": {
    "allowClientCredentialsInTokenRequestQueryParameters": false,
    "allowedAudienceValues": [],
    "authenticationAttributes": [
      "uid",
    ],
    "codeVerifierEnforced": "false",
    "defaultScopes": [],
    "displayNameAttribute": "cn",
    "expClaimRequiredInRequestObject": false,
    "grantTypes": [
      "implicit",
      "urn:ietf:params:oauth:grant-type:saml2-bearer",
      "refresh_token",
      "password",
      "client_credentials",
      "urn:ietf:params:oauth:grant-type:device_code",
      "authorization_code",
      "urn:openid:params:grant-type:ciba",
      "urn:ietf:params:oauth:grant-type:uma-ticket",
      "urn:ietf:params:oauth:grant-type:token-exchange",
      "urn:ietf:params:oauth:grant-type:jwt-bearer",
    ],
    "hashSalt": "3FQf76iBRzr9nfmqoSz4tLc7E6Wii2Cc",
    "includeClientIdClaimInStatelessTokens": true,
    "includeSubnameInTokenClaims": true,
    "macaroonTokenFormat": "V2",
    "maxAgeOfRequestObjectNbfClaim": 0,
    "maxDifferenceBetweenRequestObjectNbfAndExp": 0,
    "moduleMessageEnabledInPasswordGrant": false,
    "nbfClaimRequiredInRequestObject": false,
    "parRequestUriLifetime": 90,
    "persistentClaims": [],
    "refreshTokenGracePeriod": 0,
    "requestObjectProcessing": "OIDC",
    "requirePushedAuthorizationRequests": false,
    "responseTypeClasses": [
      "code|org.forgerock.oauth2.core.AuthorizationCodeResponseTypeHandler",
      "id_token|org.forgerock.openidconnect.IdTokenResponseTypeHandler",
      "token|org.forgerock.oauth2.core.TokenResponseTypeHandler",
    ],
    "supportedScopes": [],
    "supportedSubjectTypes": [
      "public",
      "pairwise",
    ],
    "tlsCertificateBoundAccessTokensEnabled": true,
    "tlsCertificateRevocationCheckingEnabled": false,
    "tlsClientCertificateHeaderFormat": "BASE64_ENCODED_CERT",
    "tokenCompressionEnabled": false,
    "tokenEncryptionEnabled": false,
    "tokenExchangeClasses": [
      "urn:ietf:params:oauth:token-type:access_token=>urn:ietf:params:oauth:token-type:access_token|org.forgerock.oauth2.core.tokenexchange.accesstoken.AccessTokenToAccessTokenExchanger",
      "urn:ietf:params:oauth:token-type:id_token=>urn:ietf:params:oauth:token-type:id_token|org.forgerock.oauth2.core.tokenexchange.idtoken.IdTokenToIdTokenExchanger",
      "urn:ietf:params:oauth:token-type:access_token=>urn:ietf:params:oauth:token-type:id_token|org.forgerock.oauth2.core.tokenexchange.accesstoken.AccessTokenToIdTokenExchanger",
      "urn:ietf:params:oauth:token-type:id_token=>urn:ietf:params:oauth:token-type:access_token|org.forgerock.oauth2.core.tokenexchange.idtoken.IdTokenToAccessTokenExchanger",
    ],
    "tokenSigningAlgorithm": "HS256",
    "tokenValidatorClasses": [
      "urn:ietf:params:oauth:token-type:id_token|org.forgerock.oauth2.core.tokenexchange.idtoken.OidcIdTokenValidator",
      "urn:ietf:params:oauth:token-type:access_token|org.forgerock.oauth2.core.tokenexchange.accesstoken.OAuth2AccessTokenValidator",
    ],
  },
  "advancedOIDCConfig": {
    "alwaysAddClaimsToToken": false,
    "amrMappings": {},
    "authorisedIdmDelegationClients": [],
    "authorisedOpenIdConnectSSOClients": [],
    "claimsParameterSupported": false,
    "defaultACR": [],
    "idTokenInfoClientAuthenticationEnabled": true,
    "includeAllKtyAlgCombinationsInJwksUri": false,
    "loaMapping": {},
    "storeOpsTokens": true,
    "supportedAuthorizationResponseEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedAuthorizationResponseEncryptionEnc": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedAuthorizationResponseSigningAlgorithms": [
      "PS384",
      "RS384",
      "EdDSA",
      "ES384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedRequestParameterEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "ECDH-ES+A128KW",
      "RSA-OAEP",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedRequestParameterEncryptionEnc": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedRequestParameterSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedTokenEndpointAuthenticationSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedTokenIntrospectionResponseEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedTokenIntrospectionResponseEncryptionEnc": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedTokenIntrospectionResponseSigningAlgorithms": [
      "PS384",
      "RS384",
      "EdDSA",
      "ES384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedUserInfoEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedUserInfoEncryptionEnc": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedUserInfoSigningAlgorithms": [
      "ES384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
    ],
    "useForceAuthnForMaxAge": false,
    "useForceAuthnForPromptLogin": false,
  },
  "cibaConfig": {
    "cibaAuthReqIdLifetime": 600,
    "cibaMinimumPollingInterval": 2,
    "supportedCibaSigningAlgorithms": [
      "ES256",
      "PS256",
    ],
  },
  "clientDynamicRegistrationConfig": {
    "allowDynamicRegistration": false,
    "dynamicClientRegistrationScope": "dynamic_client_registration",
    "dynamicClientRegistrationScript": "[Empty]",
    "dynamicClientRegistrationSoftwareStatementRequired": false,
    "generateRegistrationAccessTokens": true,
    "requiredSoftwareStatementAttestedAttributes": [
      "redirect_uris",
    ],
  },
  "consent": {
    "clientsCanSkipConsent": false,
    "enableRemoteConsent": false,
    "supportedRcsRequestEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedRcsRequestEncryptionMethods": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedRcsRequestSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedRcsResponseEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "ECDH-ES+A128KW",
      "RSA-OAEP",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedRcsResponseEncryptionMethods": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedRcsResponseSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
  },
  "coreOAuth2Config": {
    "accessTokenLifetime": 3600,
    "accessTokenMayActScript": "[Empty]",
    "codeLifetime": 120,
    "issueRefreshToken": true,
    "issueRefreshTokenOnRefreshedToken": true,
    "macaroonTokensEnabled": false,
    "oidcMayActScript": "[Empty]",
    "refreshTokenLifetime": 604800,
    "scopesPolicySet": "oauth2Scopes",
    "statelessTokensEnabled": false,
    "usePolicyEngineForScope": false,
  },
  "coreOIDCConfig": {
    "jwtTokenLifetime": 3600,
    "oidcDiscoveryEndpointEnabled": false,
    "overrideableOIDCClaims": [],
    "supportedClaims": [],
    "supportedIDTokenEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedIDTokenEncryptionMethods": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedIDTokenSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
  },
  "deviceCodeConfig": {
    "deviceCodeLifetime": 300,
    "devicePollInterval": 5,
    "deviceUserCodeCharacterSet": "234567ACDEFGHJKLMNPQRSTWXYZabcdefhijkmnopqrstwxyz",
    "deviceUserCodeLength": 8,
  },
  "pluginsConfig": {
    "accessTokenEnricherClass": "org.forgerock.oauth2.core.plugins.registry.DefaultAccessTokenEnricher",
    "accessTokenModificationPluginType": "SCRIPTED",
    "accessTokenModificationScript": "[Empty]",
    "authorizeEndpointDataProviderClass": "org.forgerock.oauth2.core.plugins.registry.DefaultEndpointDataProvider",
    "authorizeEndpointDataProviderPluginType": "JAVA",
    "authorizeEndpointDataProviderScript": "[Empty]",
    "evaluateScopeClass": "org.forgerock.oauth2.core.plugins.registry.DefaultScopeEvaluator",
    "evaluateScopePluginType": "JAVA",
    "evaluateScopeScript": "[Empty]",
    "oidcClaimsPluginType": "SCRIPTED",
    "oidcClaimsScript": "[Empty]",
    "userCodeGeneratorClass": "org.forgerock.oauth2.core.plugins.registry.DefaultUserCodeGenerator",
    "validateScopeClass": "org.forgerock.oauth2.core.plugins.registry.DefaultScopeValidator",
    "validateScopePluginType": "JAVA",
    "validateScopeScript": "[Empty]",
  },
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services --directory serviceTestDir1 -m forgeops": should export the services in alpha realm in fr-config-manager style": serviceTestDir1/realms/alpha/services/pingOneWorkerService.json 1`] = `
{
  "_id": "",
  "_rev": "-945038405",
  "_type": {
    "_id": "pingOneWorkerService",
    "collection": false,
    "name": "PingOne Worker Service",
  },
  "enabled": true,
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services --directory serviceTestDir1 -m forgeops": should export the services in alpha realm in fr-config-manager style": serviceTestDir1/realms/alpha/services/policyconfiguration.json 1`] = `
{
  "_id": "",
  "_rev": "109140923",
  "_type": {
    "_id": "policyconfiguration",
    "collection": false,
    "name": "Policy Configuration",
  },
  "bindDn": "uid=am-config,ou=admins,ou=am-config",
  "bindPassword": null,
  "checkIfResourceTypeExists": true,
  "connectionPoolMaximumSize": 10,
  "connectionPoolMinimumSize": 1,
  "ldapServer": [
    "ds-idrepo-0.ds-idrepo:1636",
  ],
  "maximumSearchResults": 100,
  "mtlsEnabled": false,
  "policyHeartbeatInterval": 10,
  "policyHeartbeatTimeUnit": "SECONDS",
  "realmSearchFilter": "(objectclass=sunismanagedorganization)",
  "searchTimeout": 5,
  "sslEnabled": true,
  "subjectsResultTTL": 10,
  "userAliasEnabled": false,
  "usersBaseDn": "ou=identities",
  "usersSearchAttribute": "uid",
  "usersSearchFilter": "(objectclass=inetorgperson)",
  "usersSearchScope": "SCOPE_SUB",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services --directory serviceTestDir1 -m forgeops": should export the services in alpha realm in fr-config-manager style": serviceTestDir1/realms/alpha/services/session.json 1`] = `
{
  "_id": "",
  "_rev": "-548141562",
  "_type": {
    "_id": "session",
    "collection": false,
    "name": "Session",
  },
  "dynamic": {
    "maxCachingTime": 3,
    "maxIdleTime": 30,
    "maxSessionTime": 120,
    "quotaLimit": 5,
  },
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services --directory serviceTestDir1 -m forgeops": should export the services in alpha realm in fr-config-manager style": serviceTestDir1/realms/alpha/services/user.json 1`] = `
{
  "_id": "",
  "_rev": "1838033871",
  "_type": {
    "_id": "user",
    "collection": false,
    "name": "User",
  },
  "dynamic": {
    "defaultUserStatus": "Active",
    "preferredTimezone": "",
  },
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/alpha/services/SocialIdentityProviders.json 1`] = `
{
  "_id": "",
  "_rev": "1077208638",
  "_type": {
    "_id": "SocialIdentityProviders",
    "collection": false,
    "name": "Social Identity Provider Service",
  },
  "enabled": true,
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/alpha/services/baseurl.json 1`] = `
{
  "_id": "",
  "_rev": "-1889820858",
  "_type": {
    "_id": "baseurl",
    "collection": false,
    "name": "Base URL Source",
  },
  "contextPath": "/am",
  "fixedValue": "https://&{fqdn}",
  "source": "REQUEST_VALUES",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/alpha/services/oauth-oidc.json 1`] = `
{
  "_id": "",
  "_rev": "-1302297492",
  "_type": {
    "_id": "oauth-oidc",
    "collection": false,
    "name": "OAuth2 Provider",
  },
  "advancedOAuth2Config": {
    "acceptAudienceParametersInTokenExchangeRequests": false,
    "allowClientCredentialsInTokenRequestQueryParameters": true,
    "allowedAudienceValues": [],
    "authenticationAttributes": [
      "uid",
    ],
    "codeVerifierEnforced": "false",
    "defaultScopes": [
      "address",
      "phone",
      "openid",
      "profile",
      "email",
    ],
    "displayNameAttribute": "cn",
    "enableApplicationContext": false,
    "enableRichAuthorizationRequests": false,
    "expClaimRequiredInRequestObject": false,
    "grantTypes": [
      "implicit",
      "urn:ietf:params:oauth:grant-type:saml2-bearer",
      "refresh_token",
      "password",
      "client_credentials",
      "urn:ietf:params:oauth:grant-type:device_code",
      "authorization_code",
      "urn:openid:params:grant-type:ciba",
      "urn:ietf:params:oauth:grant-type:uma-ticket",
      "urn:ietf:params:oauth:grant-type:jwt-bearer",
    ],
    "hashSalt": "&{am.oidc.client.subject.identifier.hash.salt}",
    "includeClientIdClaimInStatelessTokens": true,
    "includeSubnameInTokenClaims": true,
    "introspectionAudienceValidationEnabled": false,
    "macaroonTokenFormat": "V2",
    "maxAgeOfRequestObjectNbfClaim": 0,
    "maxDifferenceBetweenRequestObjectNbfAndExp": 0,
    "moduleMessageEnabledInPasswordGrant": false,
    "nbfClaimRequiredInRequestObject": false,
    "parRequestUriLifetime": 90,
    "passwordGrantAuthService": "Login",
    "persistentClaims": [],
    "refreshTokenGracePeriod": 0,
    "requestObjectProcessing": "OIDC",
    "requirePushedAuthorizationRequests": false,
    "responseTypeClasses": [
      "code|org.forgerock.oauth2.core.AuthorizationCodeResponseTypeHandler",
      "device_code|org.forgerock.oauth2.core.TokenResponseTypeHandler",
      "token|org.forgerock.oauth2.core.TokenResponseTypeHandler",
      "id_token|org.forgerock.openidconnect.IdTokenResponseTypeHandler",
    ],
    "restrictTokenExchangeScopesToSubjectTokenScopes": false,
    "supportedScopes": [
      "email|Your email address",
      "openid|",
      "address|Your postal address",
      "phone|Your telephone number(s)",
      "profile|Your personal information",
      "fr:idm:*",
      "am-introspect-all-tokens",
    ],
    "supportedSubjectTypes": [
      "public",
      "pairwise",
    ],
    "tlsCertificateBoundAccessTokensEnabled": true,
    "tlsCertificateRevocationCheckingEnabled": false,
    "tlsClientCertificateChainValidationEnabled": false,
    "tlsClientCertificateHeaderFormat": "BASE64_ENCODED_CERT",
    "tokenCompressionEnabled": false,
    "tokenEncryptionEnabled": false,
    "tokenExchangeClasses": [
      "urn:ietf:params:oauth:token-type:access_token=>urn:ietf:params:oauth:token-type:access_token|org.forgerock.oauth2.core.tokenexchange.accesstoken.AccessTokenToAccessTokenExchanger",
      "urn:ietf:params:oauth:token-type:id_token=>urn:ietf:params:oauth:token-type:id_token|org.forgerock.oauth2.core.tokenexchange.idtoken.IdTokenToIdTokenExchanger",
      "urn:ietf:params:oauth:token-type:access_token=>urn:ietf:params:oauth:token-type:id_token|org.forgerock.oauth2.core.tokenexchange.accesstoken.AccessTokenToIdTokenExchanger",
      "urn:ietf:params:oauth:token-type:id_token=>urn:ietf:params:oauth:token-type:access_token|org.forgerock.oauth2.core.tokenexchange.idtoken.IdTokenToAccessTokenExchanger",
    ],
    "tokenSigningAlgorithm": "HS256",
    "tokenValidatorClasses": [
      "urn:ietf:params:oauth:token-type:id_token|org.forgerock.oauth2.core.tokenexchange.idtoken.OidcIdTokenValidator",
      "urn:ietf:params:oauth:token-type:access_token|org.forgerock.oauth2.core.tokenexchange.accesstoken.OAuth2AccessTokenValidator",
    ],
    "useTokenIntrospectionClaimForJWT": false,
  },
  "advancedOIDCConfig": {
    "alwaysAddClaimsToToken": true,
    "amrMappings": {},
    "authorisedIdmDelegationClients": [],
    "authorisedOpenIdConnectSSOClients": [],
    "claimsParameterSupported": false,
    "defaultACR": [],
    "idTokenInfoClientAuthenticationEnabled": true,
    "includeAllKtyAlgCombinationsInJwksUri": false,
    "jwtSigningKidHeaderMappings": {},
    "loaMapping": {},
    "minMaxAge": 60,
    "storeOpsTokens": true,
    "supportedAuthorizationResponseEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedAuthorizationResponseEncryptionEnc": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedAuthorizationResponseSigningAlgorithms": [
      "PS384",
      "RS384",
      "EdDSA",
      "ES384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedRequestParameterEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "ECDH-ES+A128KW",
      "RSA-OAEP",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedRequestParameterEncryptionEnc": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedRequestParameterSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedTokenEndpointAuthenticationSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedTokenIntrospectionResponseEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedTokenIntrospectionResponseEncryptionEnc": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedTokenIntrospectionResponseSigningAlgorithms": [
      "PS384",
      "RS384",
      "EdDSA",
      "ES384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedUserInfoEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedUserInfoEncryptionEnc": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedUserInfoSigningAlgorithms": [
      "ES384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
    ],
    "useForceAuthnForMaxAge": false,
    "useForceAuthnForPromptLogin": false,
  },
  "aiAgentsConfig": {
    "aiAgentsEnabled": true,
    "aiAgentsIdentityObjectMapping": [
      "client_id|oauth2ClientId",
      "client_name#en|name",
      "client_name|name",
      "client_id|name",
    ],
    "aiAgentsIdentityObjectName": "managed/alpha_aiagent",
    "aiAgentsPrivilegeObjectName": "managed/alpha_aiagentprivilege",
  },
  "cibaConfig": {
    "cibaAuthReqIdLifetime": 600,
    "cibaMinimumPollingInterval": 2,
    "supportedCibaSigningAlgorithms": [
      "ES256",
      "PS256",
    ],
  },
  "clientDynamicRegistrationConfig": {
    "allowDynamicRegistration": false,
    "dynamicClientRegistrationScope": "dynamic_client_registration",
    "dynamicClientRegistrationScript": "[Empty]",
    "dynamicClientRegistrationSoftwareStatementRequired": false,
    "generateRegistrationAccessTokens": true,
    "requiredSoftwareStatementAttestedAttributes": [
      "redirect_uris",
    ],
    "storeSoftwareStatementInOAuth2Client": false,
  },
  "consent": {
    "clientsCanSkipConsent": true,
    "enableRemoteConsent": false,
    "supportedRcsRequestEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedRcsRequestEncryptionMethods": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedRcsRequestSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedRcsResponseEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "ECDH-ES+A128KW",
      "RSA-OAEP",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedRcsResponseEncryptionMethods": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedRcsResponseSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
  },
  "coreOAuth2Config": {
    "accessTokenLifetime": 3600,
    "accessTokenMayActScript": "[Empty]",
    "codeLifetime": 120,
    "issueRefreshToken": true,
    "issueRefreshTokenOnRefreshedToken": true,
    "macaroonTokensEnabled": false,
    "oidcMayActScript": "[Empty]",
    "refreshTokenLifetime": 604800,
    "scopesPolicySet": "oauth2Scopes",
    "statelessTokensEnabled": true,
    "usePolicyEngineForScope": false,
  },
  "coreOIDCConfig": {
    "jwtTokenLifetime": 3600,
    "oidcDiscoveryEndpointEnabled": true,
    "overrideableOIDCClaims": [],
    "supportedClaims": [],
    "supportedIDTokenEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedIDTokenEncryptionMethods": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedIDTokenSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
  },
  "deviceCodeConfig": {
    "deviceCodeLifetime": 300,
    "devicePollInterval": 5,
    "deviceUserCodeCharacterSet": "234567ACDEFGHJKLMNPQRSTWXYZabcdefhijkmnopqrstwxyz",
    "deviceUserCodeLength": 8,
    "realmAllowUnauthorisedAccessToUserCodeForm": false,
  },
  "pluginsConfig": {
    "accessTokenEnricherClass": "org.forgerock.openam.oauth2.OpenAMScopeValidator",
    "accessTokenModificationPluginType": "SCRIPTED",
    "accessTokenModificationScript": "39c08084-1238-43e8-857f-2e11005eac49",
    "accessTokenModifierClass": "org.forgerock.openam.oauth2.OpenAMScopeValidator",
    "authorizeEndpointDataProviderClass": "org.forgerock.openam.oauth2.OpenAMScopeValidator",
    "authorizeEndpointDataProviderPluginType": "JAVA",
    "authorizeEndpointDataProviderScript": "[Empty]",
    "evaluateScopeClass": "org.forgerock.openam.oauth2.OpenAMScopeValidator",
    "evaluateScopePluginType": "JAVA",
    "evaluateScopeScript": "[Empty]",
    "oidcClaimsClass": "org.forgerock.openam.oauth2.OpenAMScopeValidator",
    "oidcClaimsPluginType": "SCRIPTED",
    "oidcClaimsScript": "cf3515f0-8278-4ee3-a530-1bad7424c416",
    "userCodeGeneratorClass": "org.forgerock.oauth2.core.plugins.registry.DefaultUserCodeGenerator",
    "validateScopeClass": "org.forgerock.openam.oauth2.OpenAMScopeValidator",
    "validateScopePluginType": "JAVA",
    "validateScopeScript": "[Empty]",
  },
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/alpha/services/pingOneWorkerService.json 1`] = `
{
  "_id": "",
  "_rev": "-945038405",
  "_type": {
    "_id": "pingOneWorkerService",
    "collection": false,
    "name": "PingOne Worker Service",
  },
  "enabled": true,
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/alpha/services/pingOneWorkerService/Encore.json 1`] = `
{
  "_id": "Encore",
  "_type": {
    "_id": "workers",
    "collection": true,
    "name": "PingOne Worker",
  },
  "apiUrl": "https://api.pingone.com/v1",
  "authUrl": "https://auth.pingone.com",
  "clientId": "bogus",
  "clientSecretPurpose": "bogus",
  "environmentId": "bogus",
  "useCredential": false,
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/alpha/services/pingOneWorkerService/volker-pingone.json 1`] = `
{
  "_id": "volker-pingone",
  "_type": {
    "_id": "workers",
    "collection": true,
    "name": "PingOne Worker",
  },
  "apiUrl": "https://api.pingone.com/v1",
  "authUrl": "https://auth.pingone.com",
  "clientId": "8d749c80-5ef2-4361-974d-c077f233b3a0",
  "clientSecretPurpose": "volkerPingOne",
  "environmentId": "62976c51-1de1-49ce-b29a-06b32b0c2e2c",
  "useCredential": false,
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/alpha/services/policyconfiguration.json 1`] = `
{
  "_id": "",
  "_rev": "-247595145",
  "_type": {
    "_id": "policyconfiguration",
    "collection": false,
    "name": "Policy Configuration",
  },
  "bindDn": "&{am.stores.user.username}",
  "bindPassword": {
    "$string": "&{am.stores.user.password}",
  },
  "checkIfResourceTypeExists": true,
  "connectionPoolMaximumSize": 10,
  "connectionPoolMinimumSize": 1,
  "ldapServer": [
    "userstore-1.userstore.fr-platform.svc.cluster.local:1389",
    "userstore-2.userstore.fr-platform.svc.cluster.local:1389",
    "userstore-0.userstore.fr-platform.svc.cluster.local:1389",
  ],
  "maximumSearchResults": 100,
  "mtlsEnabled": false,
  "policyHeartbeatInterval": 10,
  "policyHeartbeatTimeUnit": "SECONDS",
  "realmSearchFilter": "(objectclass=sunismanagedorganization)",
  "searchTimeout": 5,
  "sslEnabled": {
    "$bool": "&{am.stores.ssl.enabled}",
  },
  "subjectsResultTTL": 10,
  "userAliasEnabled": false,
  "usersBaseDn": "ou=identities",
  "usersSearchAttribute": "uid",
  "usersSearchFilter": "(objectclass=inetorgperson)",
  "usersSearchScope": "SCOPE_SUB",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/alpha/services/selfServiceTrees.json 1`] = `
{
  "_id": "",
  "_rev": "-948959244",
  "_type": {
    "_id": "selfServiceTrees",
    "collection": false,
    "name": "Self Service Trees",
  },
  "enabled": true,
  "treeMapping": {
    "forgottenUsername": "ForgottenUsername",
    "registration": "Registration",
    "resetPassword": "ResetPassword",
    "updatePassword": "UpdatePassword",
  },
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/alpha/services/validation.json 1`] = `
{
  "_id": "",
  "_rev": "896681690",
  "_type": {
    "_id": "validation",
    "collection": false,
    "name": "Validation Service",
  },
  "validGotoDestinations": [
    "&{am.server.protocol|https}://&{fqdn}/*?*",
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/bravo/services/SocialIdentityProviders.json 1`] = `
{
  "_id": "",
  "_rev": "1077208638",
  "_type": {
    "_id": "SocialIdentityProviders",
    "collection": false,
    "name": "Social Identity Provider Service",
  },
  "enabled": true,
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/bravo/services/baseurl.json 1`] = `
{
  "_id": "",
  "_rev": "-1889820858",
  "_type": {
    "_id": "baseurl",
    "collection": false,
    "name": "Base URL Source",
  },
  "contextPath": "/am",
  "fixedValue": "https://&{fqdn}",
  "source": "REQUEST_VALUES",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/bravo/services/oauth-oidc.json 1`] = `
{
  "_id": "",
  "_rev": "-1665717778",
  "_type": {
    "_id": "oauth-oidc",
    "collection": false,
    "name": "OAuth2 Provider",
  },
  "advancedOAuth2Config": {
    "acceptAudienceParametersInTokenExchangeRequests": false,
    "allowClientCredentialsInTokenRequestQueryParameters": true,
    "allowedAudienceValues": [],
    "authenticationAttributes": [
      "uid",
    ],
    "codeVerifierEnforced": "false",
    "defaultScopes": [
      "address",
      "phone",
      "openid",
      "profile",
      "email",
    ],
    "displayNameAttribute": "cn",
    "enableApplicationContext": false,
    "enableRichAuthorizationRequests": false,
    "expClaimRequiredInRequestObject": false,
    "grantTypes": [
      "implicit",
      "urn:ietf:params:oauth:grant-type:saml2-bearer",
      "refresh_token",
      "password",
      "client_credentials",
      "urn:ietf:params:oauth:grant-type:device_code",
      "authorization_code",
      "urn:openid:params:grant-type:ciba",
      "urn:ietf:params:oauth:grant-type:uma-ticket",
      "urn:ietf:params:oauth:grant-type:jwt-bearer",
    ],
    "hashSalt": "&{am.oidc.client.subject.identifier.hash.salt}",
    "includeClientIdClaimInStatelessTokens": true,
    "includeSubnameInTokenClaims": true,
    "introspectionAudienceValidationEnabled": false,
    "macaroonTokenFormat": "V2",
    "maxAgeOfRequestObjectNbfClaim": 0,
    "maxDifferenceBetweenRequestObjectNbfAndExp": 0,
    "moduleMessageEnabledInPasswordGrant": false,
    "nbfClaimRequiredInRequestObject": false,
    "parRequestUriLifetime": 90,
    "passwordGrantAuthService": "Login",
    "persistentClaims": [],
    "refreshTokenGracePeriod": 0,
    "requestObjectProcessing": "OIDC",
    "requirePushedAuthorizationRequests": false,
    "responseTypeClasses": [
      "code|org.forgerock.oauth2.core.AuthorizationCodeResponseTypeHandler",
      "device_code|org.forgerock.oauth2.core.TokenResponseTypeHandler",
      "token|org.forgerock.oauth2.core.TokenResponseTypeHandler",
      "id_token|org.forgerock.openidconnect.IdTokenResponseTypeHandler",
    ],
    "restrictTokenExchangeScopesToSubjectTokenScopes": false,
    "supportedScopes": [
      "email|Your email address",
      "openid|",
      "address|Your postal address",
      "phone|Your telephone number(s)",
      "profile|Your personal information",
      "fr:idm:*",
      "am-introspect-all-tokens",
    ],
    "supportedSubjectTypes": [
      "public",
      "pairwise",
    ],
    "tlsCertificateBoundAccessTokensEnabled": true,
    "tlsCertificateRevocationCheckingEnabled": false,
    "tlsClientCertificateChainValidationEnabled": false,
    "tlsClientCertificateHeaderFormat": "BASE64_ENCODED_CERT",
    "tokenCompressionEnabled": false,
    "tokenEncryptionEnabled": false,
    "tokenExchangeClasses": [
      "urn:ietf:params:oauth:token-type:access_token=>urn:ietf:params:oauth:token-type:access_token|org.forgerock.oauth2.core.tokenexchange.accesstoken.AccessTokenToAccessTokenExchanger",
      "urn:ietf:params:oauth:token-type:id_token=>urn:ietf:params:oauth:token-type:id_token|org.forgerock.oauth2.core.tokenexchange.idtoken.IdTokenToIdTokenExchanger",
      "urn:ietf:params:oauth:token-type:access_token=>urn:ietf:params:oauth:token-type:id_token|org.forgerock.oauth2.core.tokenexchange.accesstoken.AccessTokenToIdTokenExchanger",
      "urn:ietf:params:oauth:token-type:id_token=>urn:ietf:params:oauth:token-type:access_token|org.forgerock.oauth2.core.tokenexchange.idtoken.IdTokenToAccessTokenExchanger",
    ],
    "tokenSigningAlgorithm": "HS256",
    "tokenValidatorClasses": [
      "urn:ietf:params:oauth:token-type:id_token|org.forgerock.oauth2.core.tokenexchange.idtoken.OidcIdTokenValidator",
      "urn:ietf:params:oauth:token-type:access_token|org.forgerock.oauth2.core.tokenexchange.accesstoken.OAuth2AccessTokenValidator",
    ],
    "useTokenIntrospectionClaimForJWT": false,
  },
  "advancedOIDCConfig": {
    "alwaysAddClaimsToToken": true,
    "amrMappings": {},
    "authorisedIdmDelegationClients": [],
    "authorisedOpenIdConnectSSOClients": [],
    "claimsParameterSupported": false,
    "defaultACR": [],
    "idTokenInfoClientAuthenticationEnabled": true,
    "includeAllKtyAlgCombinationsInJwksUri": false,
    "jwtSigningKidHeaderMappings": {},
    "loaMapping": {},
    "minMaxAge": 60,
    "storeOpsTokens": true,
    "supportedAuthorizationResponseEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedAuthorizationResponseEncryptionEnc": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedAuthorizationResponseSigningAlgorithms": [
      "PS384",
      "RS384",
      "EdDSA",
      "ES384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedRequestParameterEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "ECDH-ES+A128KW",
      "RSA-OAEP",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedRequestParameterEncryptionEnc": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedRequestParameterSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedTokenEndpointAuthenticationSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedTokenIntrospectionResponseEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedTokenIntrospectionResponseEncryptionEnc": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedTokenIntrospectionResponseSigningAlgorithms": [
      "PS384",
      "RS384",
      "EdDSA",
      "ES384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedUserInfoEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedUserInfoEncryptionEnc": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedUserInfoSigningAlgorithms": [
      "ES384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
    ],
    "useForceAuthnForMaxAge": false,
    "useForceAuthnForPromptLogin": false,
  },
  "aiAgentsConfig": {
    "aiAgentsEnabled": true,
    "aiAgentsIdentityObjectMapping": [
      "client_id|oauth2ClientId",
      "client_name#en|name",
      "client_name|name",
      "client_id|name",
    ],
    "aiAgentsIdentityObjectName": "managed/bravo_aiagent",
    "aiAgentsPrivilegeObjectName": "managed/bravo_aiagentprivilege",
  },
  "cibaConfig": {
    "cibaAuthReqIdLifetime": 600,
    "cibaMinimumPollingInterval": 2,
    "supportedCibaSigningAlgorithms": [
      "ES256",
      "PS256",
    ],
  },
  "clientDynamicRegistrationConfig": {
    "allowDynamicRegistration": false,
    "dynamicClientRegistrationScope": "dynamic_client_registration",
    "dynamicClientRegistrationScript": "[Empty]",
    "dynamicClientRegistrationSoftwareStatementRequired": false,
    "generateRegistrationAccessTokens": true,
    "requiredSoftwareStatementAttestedAttributes": [
      "redirect_uris",
    ],
    "storeSoftwareStatementInOAuth2Client": false,
  },
  "consent": {
    "clientsCanSkipConsent": true,
    "enableRemoteConsent": false,
    "supportedRcsRequestEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedRcsRequestEncryptionMethods": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedRcsRequestSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
    "supportedRcsResponseEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "ECDH-ES+A128KW",
      "RSA-OAEP",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedRcsResponseEncryptionMethods": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedRcsResponseSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
  },
  "coreOAuth2Config": {
    "accessTokenLifetime": 3600,
    "accessTokenMayActScript": "[Empty]",
    "codeLifetime": 120,
    "issueRefreshToken": true,
    "issueRefreshTokenOnRefreshedToken": true,
    "macaroonTokensEnabled": false,
    "oidcMayActScript": "[Empty]",
    "refreshTokenLifetime": 604800,
    "scopesPolicySet": "oauth2Scopes",
    "statelessTokensEnabled": true,
    "usePolicyEngineForScope": false,
  },
  "coreOIDCConfig": {
    "jwtTokenLifetime": 3600,
    "oidcDiscoveryEndpointEnabled": true,
    "overrideableOIDCClaims": [],
    "supportedClaims": [],
    "supportedIDTokenEncryptionAlgorithms": [
      "ECDH-ES+A256KW",
      "ECDH-ES+A192KW",
      "RSA-OAEP",
      "ECDH-ES+A128KW",
      "RSA-OAEP-256",
      "A128KW",
      "A256KW",
      "ECDH-ES",
      "dir",
      "A192KW",
    ],
    "supportedIDTokenEncryptionMethods": [
      "A256GCM",
      "A192GCM",
      "A128GCM",
      "A128CBC-HS256",
      "A192CBC-HS384",
      "A256CBC-HS512",
    ],
    "supportedIDTokenSigningAlgorithms": [
      "PS384",
      "ES384",
      "RS384",
      "HS256",
      "HS512",
      "ES256",
      "RS256",
      "HS384",
      "ES512",
      "PS256",
      "PS512",
      "RS512",
    ],
  },
  "deviceCodeConfig": {
    "deviceCodeLifetime": 300,
    "devicePollInterval": 5,
    "deviceUserCodeCharacterSet": "234567ACDEFGHJKLMNPQRSTWXYZabcdefhijkmnopqrstwxyz",
    "deviceUserCodeLength": 8,
    "realmAllowUnauthorisedAccessToUserCodeForm": false,
  },
  "pluginsConfig": {
    "accessTokenEnricherClass": "org.forgerock.openam.oauth2.OpenAMScopeValidator",
    "accessTokenModificationPluginType": "SCRIPTED",
    "accessTokenModificationScript": "21138ab1-0621-4466-b18f-670bfcbabca7",
    "accessTokenModifierClass": "org.forgerock.openam.oauth2.OpenAMScopeValidator",
    "authorizeEndpointDataProviderClass": "org.forgerock.openam.oauth2.OpenAMScopeValidator",
    "authorizeEndpointDataProviderPluginType": "JAVA",
    "authorizeEndpointDataProviderScript": "[Empty]",
    "evaluateScopeClass": "org.forgerock.openam.oauth2.OpenAMScopeValidator",
    "evaluateScopePluginType": "JAVA",
    "evaluateScopeScript": "[Empty]",
    "oidcClaimsClass": "org.forgerock.openam.oauth2.OpenAMScopeValidator",
    "oidcClaimsPluginType": "SCRIPTED",
    "oidcClaimsScript": "3e31996b-4522-44a2-b360-0851cece3854",
    "userCodeGeneratorClass": "org.forgerock.oauth2.core.plugins.registry.DefaultUserCodeGenerator",
    "validateScopeClass": "org.forgerock.openam.oauth2.OpenAMScopeValidator",
    "validateScopePluginType": "JAVA",
    "validateScopeScript": "[Empty]",
  },
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/bravo/services/pingOneWorkerService.json 1`] = `
{
  "_id": "",
  "_rev": "-945038405",
  "_type": {
    "_id": "pingOneWorkerService",
    "collection": false,
    "name": "PingOne Worker Service",
  },
  "enabled": true,
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/bravo/services/policyconfiguration.json 1`] = `
{
  "_id": "",
  "_rev": "-247595145",
  "_type": {
    "_id": "policyconfiguration",
    "collection": false,
    "name": "Policy Configuration",
  },
  "bindDn": "&{am.stores.user.username}",
  "bindPassword": {
    "$string": "&{am.stores.user.password}",
  },
  "checkIfResourceTypeExists": true,
  "connectionPoolMaximumSize": 10,
  "connectionPoolMinimumSize": 1,
  "ldapServer": [
    "userstore-1.userstore.fr-platform.svc.cluster.local:1389",
    "userstore-2.userstore.fr-platform.svc.cluster.local:1389",
    "userstore-0.userstore.fr-platform.svc.cluster.local:1389",
  ],
  "maximumSearchResults": 100,
  "mtlsEnabled": false,
  "policyHeartbeatInterval": 10,
  "policyHeartbeatTimeUnit": "SECONDS",
  "realmSearchFilter": "(objectclass=sunismanagedorganization)",
  "searchTimeout": 5,
  "sslEnabled": {
    "$bool": "&{am.stores.ssl.enabled}",
  },
  "subjectsResultTTL": 10,
  "userAliasEnabled": false,
  "usersBaseDn": "ou=identities",
  "usersSearchAttribute": "uid",
  "usersSearchFilter": "(objectclass=inetorgperson)",
  "usersSearchScope": "SCOPE_SUB",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/bravo/services/selfServiceTrees.json 1`] = `
{
  "_id": "",
  "_rev": "-948959244",
  "_type": {
    "_id": "selfServiceTrees",
    "collection": false,
    "name": "Self Service Trees",
  },
  "enabled": true,
  "treeMapping": {
    "forgottenUsername": "ForgottenUsername",
    "registration": "Registration",
    "resetPassword": "ResetPassword",
    "updatePassword": "UpdatePassword",
  },
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir": should export the services in fr-config-manager style": serviceTestDir/realms/bravo/services/validation.json 1`] = `
{
  "_id": "",
  "_rev": "896681690",
  "_type": {
    "_id": "validation",
    "collection": false,
    "name": "Validation Service",
  },
  "validGotoDestinations": [
    "&{am.server.protocol|https}://&{fqdn}/*?*",
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir2 -n SocialIdentityProviders -m forgeops": should export the services with name: SocialIdentityProviders from alpha realm in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir2 -n SocialIdentityProviders -m forgeops": should export the services with name: SocialIdentityProviders from alpha realm in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull services -D serviceTestDir2 -n SocialIdentityProviders -m forgeops": should export the services with name: SocialIdentityProviders from alpha realm in fr-config-manager style": serviceTestDir2/realms/alpha/services/SocialIdentityProviders.json 1`] = `
{
  "_id": "",
  "_rev": "1077208638",
  "_type": {
    "_id": "SocialIdentityProviders",
    "collection": false,
    "name": "Social Identity Provider Service",
  },
  "enabled": true,
}
`;
